--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
 
 <body>
 
+    <h1>Hello Im Alive</h1>
+
+
      <section id="sec-one" >
 
-        <img src="" alt="" id="the-1st">
-        <img src="" alt="" id="the-2nd">
-        <img src="" alt="" id="the-3ed" >
+            <img src="" alt="" id="the-1st">
+            <img src="" alt="" id="the-2nd">
+            <img src="" alt="" id="the-3ed" >
+            
      </section>
 
     <section id="sec-two">
         <ul id="unList"></ul>
     </section>
+
+    <footer>
+
+    </footer>
+
+
+    <script src="./js/app.js"></script>
 </main>
 
 
