--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/stylesheet/style.css">
+    <title>BusMall</title>
 </head>
 
 
@@ -18,7 +19,7 @@
             <img src="" alt="" id="the-1st">
             <img src="" alt="" id="the-2nd">
             <img src="" alt="" id="the-3ed" >
-            
+
      </section>
 
     <section id="sec-two">
