--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
      </section>
 
     <section id="sec-two">
+            <button id='btn'></button>
         <ul id="unList"></ul>
     </section>
 
