--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             <button id='btn'></button>
         <ul id="unList"></ul>
     </section>
+         
+    <canvas id="myChart"></canvas>
 
     <footer>
 
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/app.js"></script>
 </main>
 
