show the functions details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </section>
 
     <section id="sec-two">
-            <button id='btn'></button>
+            <button id='btn'>Show the Result </button>
         <ul id="unList"></ul>
     </section>
          
